Add prelude section